welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:4: error: '(' expected but identifier found.
    if nums(i) == lookingFor
       ^