welcome.lessons.welcome.array.search.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {
  for (i<- 0 to nums.lengt-1)
  {
    if nums(i) == lookingFor
    	return i
  }
  return -1
}